# irtk-refactored-deprecated

./: .gitignore  AUTHORS.txt  CHANGELOG.md  CMakeLists.txt  INSTALL.md  README.md  THANKS.txt
Applications/: CMakeLists.txt  dof2image.cc  dof2mat.cc  dofaverage.cc  dofinit.cc  dofinvert.cc  ireg.cc  ptransformation.cc  transformation.cc
Documentation/: CMakeLists.txt  Doxyfile.in
Modules/Common/src/: CMakeLists.txt  irtkBSpline.cc  irtkCifstream.cc  irtkCofstream.cc  irtkCommon.cc  irtkCxxLib.cc  irtkException.cc  irtkMatlab.cc  irtkObserver.cc  irtkOptions.cc  irtkParallel.cc  irtkPath.cc  irtkProfiling.cc  irtkSinc.cc  irtkTerminal.cc  irtkZLib.cc
Modules/Geometry/src/: CMakeLists.txt  irtkArith.cc  irtkComplexFunction.cc  irtkDataOp.cc  irtkMatrix.cc  irtkMatrix3x3.cc  irtkNeighbourhoodOffsets.cc  irtkPoint.cc  irtkPointSamples.cc  irtkPointSet.cc  irtkQuaternion.cc  irtkScalarFunction.cc  irtkScalarGaussian.cc  irtkScalarGaussianDx.cc  irtkScalarGaussianDxDx.cc  irtkScalarGaussianDxDy.cc  irtkScalarGaussianDxDz.cc  irtkScalarGaussianDy.cc  irtkScalarGaussianDyDy.cc  irtkScalarGaussianDyDz.cc  irtkScalarGaussianDz.cc  irtkScalarGaussianDzDz.cc  irtkSparseMatrix.cc  irtkVTKFunctions.cc  irtkVector.cc  irtkVector3.cc  irtkVector3D.cc  irtkVector4D.cc
Modules/Image/src/: CMakeLists.txt  irtkAnisoDiffusion.cc  irtkBaseImage.cc  irtkConvolution.cc  irtkConvolutionWithGaussianDerivative.cc  irtkConvolutionWithGaussianDerivative2.cc  irtkConvolutionWithPadding_1D.cc  irtkConvolutionWithPadding_2D.cc  irtkConvolutionWithPadding_3D.cc  irtkConvolution_1D.cc  irtkConvolution_1D.cu  irtkConvolution_2D.cc  irtkConvolution_3D.cc  irtkDensity.cc  irtkDifferenceOfCompositionLieBracketImageFilter3D.cc  irtkDilation.cc  irtkDisplacementToVelocityFieldBCH.cc  irtkDisplacementToVelocityFieldBCH.cu  irtkDownsampling.cc  irtkErosion.cc  irtkEuclideanDistanceTransform.cc  irtkExtrapolateImageFunction.cc  irtkFileANALYZEToImage.cc  irtkFileGIPLToImage.cc  irtkFileNIFTIToImage.cc  irtkFileOpenCVToImage.cc  irtkFilePGMToImage.cc  irtkFileToImage.cc  irtkFileVTKToImage.cc  irtkGaussianBlurring.cc  irtkGaussianBlurring2D.cc  irtkGaussianBlurring4D.cc  irtkGaussianBlurringWithPadding.cc  irtkGaussianBlurringWithPadding2D.cc  irtkGaussianNoise.cc  irtkGaussianNoiseWithPadding.cc  irtkGaussianPyramidFilter.cc  irtkGenericImage.cc  irtkGradientImage.cc  irtkGradientImageFilter.cc  (+44 more)
Modules/Image/test/: CMakeLists.txt  irtkDownsamplingTest.cc
Modules/Registration/: CMakeLists.txt
Modules/Registration/include/: irtkAdaptiveLineSearch.h  irtkBalloonForce.h  irtkCharbonnierErrorFunction.h  irtkClosestCell.h  irtkClosestPoint.h  irtkClosestPointLabel.h  irtkConjugateGradientDescent.h  irtkCosineOfNormalizedGradientField.h  irtkCurrentsDistance.h  irtkCurvatureConstraint.h  irtkDataFidelity.h  irtkDeformableSurfaceDebugger.h  irtkDeformableSurfaceLogger.h  irtkDeformableSurfaceModel.h  irtkDistanceErrorFunction.h  irtkEdgeLengthConstraint.h  irtkEnergyTerm.h  irtkEulerMethod.h  irtkEulerMethodWithMomentum.h  irtkExternalForce.h  irtkFiducialMatch.h  irtkFiducialRegistrationError.h  irtkFuzzyCorrespondence.h  irtkFuzzyCorrespondenceUtils.h  irtkGaussianErrorFunction.h  irtkGenericRegistrationDebugger.h  irtkGenericRegistrationFilter.h  irtkGenericRegistrationLogger.h  irtkGradientDescent.h  irtkGradientFieldSimilarity.h  irtkImageEdgeForce.h  irtkImageSimilarity.h  irtkInexactLineSearch.h  irtkInflationForce.h  irtkIntensityCrossCorrelation.h  irtkJacobianConstraint.h  irtkLaplacianConstraint.h  irtkLimitedMemoryBFGSDescent.h  irtkLineSearch.h  irtkLocalOptimizer.h  (+40 more)
Modules/Registration/src/: CMakeLists.txt  irtkAdaptiveLineSearch.cc  irtkBalloonForce.cc  irtkClosestCell.cc  irtkClosestPoint.cc  irtkClosestPointLabel.cc  irtkConjugateGradientDescent.cc  irtkCosineOfNormalizedGradientField.cc  irtkCurrentsDistance.cc  irtkCurvatureConstraint.cc  irtkDataFidelity.cc  irtkDeformableSurfaceDebugger.cc  irtkDeformableSurfaceLogger.cc  irtkDeformableSurfaceModel.cc  irtkEdgeLengthConstraint.cc  irtkEnergyTerm.cc  irtkEulerMethod.cc  irtkEulerMethodWithMomentum.cc  irtkExternalForce.cc  irtkFiducialMatch.cc  irtkFiducialRegistrationError.cc  irtkFuzzyCorrespondence.cc  irtkFuzzyCorrespondenceUtils.cc  irtkGenericRegistrationDebugger.cc  irtkGenericRegistrationFilter.cc  irtkGenericRegistrationFilter_registration2++.cc  irtkGenericRegistrationLogger.cc  irtkGradientDescent.cc  irtkGradientFieldSimilarity.cc  irtkImageEdgeForce.cc  irtkImageSimilarity.cc  irtkImageSimilarityMetric.cc  irtkInexactLineSearch.cc  irtkInflationForce.cc  irtkIntensityCrossCorrelation.cc  irtkJacobianConstraint.cc  irtkLaplacianConstraint.cc  irtkLimitedMemoryBFGSDescent.cc  irtkLineSearch.cc  irtkLocalOptimizer.cc  (+35 more)
Modules/Transformation/src/: CMakeLists.txt  irtkAffineTransformation.cc  irtkBSplineFreeFormTransformation3D.cc  irtkBSplineFreeFormTransformation4D.cc  irtkBSplineFreeFormTransformationSV.cc  irtkBSplineFreeFormTransformationStatistical.cc  irtkBSplineFreeFormTransformationTD.cc  irtkBSplineFreeFormTransformationTD.cu  irtkEigenFreeFormTransformation.cc  irtkFluidFreeFormTransformation.cc  irtkFreeFormTransformation.cc  irtkFreeFormTransformation3D.cc  irtkFreeFormTransformation4D.cc  irtkFreeFormTransformationRungeKutta.cc  irtkHomogeneousTransformation.cc  irtkImageFastFourierTransform.cc  irtkImageHomogeneousTransformation.cc  irtkImageTransformation.cc  irtkImageTransformation2.cc  irtkInverseAffineTransformation.cc  irtkLinearFreeFormTransformation3D.cc  irtkLinearFreeFormTransformation4D.cc  irtkLinearFreeFormTransformationTD.cc  irtkMultiLevelFreeFormTransformation.cc  irtkMultiLevelStationaryVelocityTransformation.cc  irtkMultiLevelTransformation.cc  irtkMultipleImageTransformation.cc  irtkPartialAffineTransformation.cc  irtkPartialBSplineFreeFormTransformationSV.cc  irtkPartialMultiLevelStationaryVelocityTransformation.cc  irtkQuaternionTransformation.cc  irtkRigidTransformation.cc  irtkSimilarityTransformation.cc  irtkTransformation.cc  irtkTransformationApproximationError.cc  irtkTransformationInverse.cc
(+380 files in other folders)
